--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "cordova-ios": "^4.5.5",
         "cordova-plugin-browsersync": "^1.1.0",
         "cordova-plugin-screen-orientation": "^3.0.1",
+        "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "csp-parse": "0.0.2",
         "elementtree": "^0.1.7",
@@ -30,7 +31,8 @@
         "plugins": {
             "cordova-plugin-whitelist": {},
             "cordova-plugin-browsersync": {},
-            "cordova-plugin-screen-orientation": {}
+            "cordova-plugin-screen-orientation": {},
+            "cordova-plugin-splashscreen": {}
         },
         "platforms": [
             "browser",
